# dsc259_final_project_rsrogers

./: Checkpoint1answers.ipynb  cause_category.html  duration_month.html  environment.yml  main_notebook_from_template.ipynb  old_version_notinuse_notebook_from_template.ipynb  outage_duration.html  project_details.md  pyproject.toml
checkpoint_responses/: checkpoint_01.md
data/: .~lock.outage.csv#  .~lock.outage.xlsx#  clean_details.md  outage.csv  outage_clean.csv  outage_header_info.csv
data/docs/img/plots/: step2.1_outage_duration_dist.html  step2.2_cause_category_counts.html  step3.1_missingness_cause_category.html  step3.2_tvd_permutation_cause.html  step3.3_missingness_climate_category.html  step3.4_tvd_permutation_climate.html  step4.1_duration_by_state_wecc.html  step6.1_baseline_pred_vs_actual.html  step6.2_baseline_residuals.html
docs/: _config.yml  baseline.md  bio-hans.md  bio-jillian.md  bio-rsrogers.md  bio-scotty.md  eda.md  fairness.md  final-model.md  hypothesis.md  index.md  introduction.md  missingness.md  prediction.md
docs/_includes/: call-to-action.html  contact.html  footer.html  head.html  header.html  nav.html  portfolio.html  services.html
docs/_layouts/: bio.html  page.html
docs/assets/css/: style.scss
docs/img/plots/: cause_category.html  duration_month.html  outage_duration.html
notebooks/: duration_month.html  eda.ipynb  group_project_notebook.ipynb  hans_scratch.ipynb
